--- a/Templates/report_found.html
+++ b/Templates/report_found.html
@@ -146,8 +146,10 @@
       {% endif %}
     {% endwith %}
 
+
+
     <form method="post" enctype="multipart/form-data">
-      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+      {{ form.hidden_tag() }}
 
       <label>{{ form.description.label }}</label>
       {{ form.description(size=50, id="desc") }}
