--- a/Templates/login.html
+++ b/Templates/login.html
@@ -33,7 +33,7 @@
 <body>
   <div class="login-box">
     <h2>Login</h2>
-    <form method="post" action="{{ url_for('do_login') }}">
+    <form method="post" action="{{ url_for('login') }}">
       <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
